# west_notifications

./: Cargo.toml  README.md
examples/: email.rs
src/: main.rs
