[package]
name = "waves_stop_loss"
version = "0.1.0"
authors = ["Aleksandrov Vladimir <invis87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["json"] }
serde = {version = "1.0.104", features = ["derive"] }

tokio = { version = "0.2", features = ["full"] }

lettre = "0.9.2"
lettre_email = "0.9.2"

chrono = "0.4.10"